# Zebulon05

./: .gitignore  README.md  app_ros_graph.drawio  opis_projektu.docx
CAD/: Body.ipt  Body.stl  Leg1.ipt  Leg1.stl  Leg2.ipt  Leg2.stl  Leg3.ipt  Main_Assembly.iam  Spacer.ipt  Spacer.stl  leg0.ipt  maestro_Subs.ipt
CAD/Servo/: Case.ipt
CAD_drawings/: Drawing1.dwg
Inventor_models/: Leg1.ipt  Leg2.ipt  Main_Assembly.iam  RPi Subs.ipt  generic_spacer.ipt  leg0.ipt  step_down_Suba.ipt
Inventor_models/Servo/: Case.ipt  HORN-D.ipt
UML_diagrams/: MaestroWrapper.txt  planttext.url
latech/: DH_calculations.m  Untitled.m  cpp.tex
other_scripts/: DH_calculations.m
other_scripts/kinematics_tester/: MaestroController.py
praca_dyplomowa/: bibliografia.bib  praca.tex  rozdzial1.tex  rozdzial2.tex  rozdzial3.tex  rozdzial4.tex  rozdzial5.tex  rozdzial6.tex  rozdzial7.tex
praca_dyplomowa/UML_diagrams/: RobotRosLeg.txt
ros_packages_full/install/: local_setup.sh  setup.sh
ros_packages_full/install/RobotLeg/lib/RobotLeg/: robot_leg_wrapper
ros_packages_full/install/RobotLeg/share/RobotLeg/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros_packages_full/install/legged_robot__interfaces/share/legged_robot__interfaces/: package.bash  package.zsh
ros_packages_full/install/maestro_interfaces/share/maestro_interfaces/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros_packages_full/install/maestro_interfaces/share/maestro_interfaces/cmake/: export_maestro_interfaces__rosidl_generator_cExport.cmake  export_maestro_interfaces__rosidl_generator_cppExport.cmake  export_maestro_interfaces__rosidl_generator_pyExport-noconfig.cmake  export_maestro_interfaces__rosidl_typesupport_fastrtps_cExport.cmake  maestro_interfaces__rosidl_typesupport_cExport-noconfig.cmake  maestro_interfaces__rosidl_typesupport_cppExport-noconfig.cmake  maestro_interfaces__rosidl_typesupport_introspection_cExport-noconfig.cmake  maestro_interfaces__rosidl_typesupport_introspection_cppExport-noconfig.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
ros_packages_full/install/maestro_interfaces/share/maestro_interfaces/msg/: CurrentPositions.idl  MaestroTarget.idl
ros_packages_full/install/polulu_maestro/lib/polulu_maestro/: maestro_test_pub  maestro_wrapper
ros_packages_full/install/polulu_maestro/share/polulu_maestro/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros_packages_full/install/turtlesim/lib/turtlesim/: draw_square  mimic  turtle_teleop_key
ros_packages_full/install/turtlesim/share/turtlesim/: package.sh
ros_packages_full/install/walking_robot_interfaces/share/walking_robot_interfaces/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros_packages_full/install/walking_robot_interfaces/share/walking_robot_interfaces/msg/: Step.idl
ros_packages_full/launch/: tripod_launch.py
ros_packages_full/log/: latest_build
ros_packages_full/src/RobotLeg/: CMakeLists.txt  package.xml
ros_packages_full/src/RobotLeg/include/RobotLeg/: RobotLegRos.hpp  RobotLegRosWrapper.hpp
ros_packages_full/src/RobotLeg/msg/: Step.msg
ros_packages_full/src/RobotLeg/src/: RobotLegRos.cpp  RobotLegRosWrapper.cpp
ros_packages_full/src/maestro_interfaces/: CMakeLists.txt  package.xml
ros_packages_full/src/polulu_maestro/: setup.cfg  setup.py
ros_packages_full/src/polulu_maestro/polulu_maestro/: MaestroRosWrapper.py  MaestroTestPub.py
ros_packages_full/src/three_legs_controller/: CMakeLists.txt  package.xml
ros_packages_full/src/three_legs_controller/include/three_legs_controller/: Generator3A.hpp  three_legs_controller.hpp
ros_packages_full/src/three_legs_controller/src/: Generator3A.cpp  three_legs_controller.cpp
ros_packages_full/src/walking_robot_interfaces/: CMakeLists.txt  docs.txt
ros_packages_full/src/walking_robot_interfaces/msg/: Step.msg
ros_packages_raw/maestro/: MaestroTestPub.py  raw_tester.py
ros_packages_raw/maestro/msg/: MaestroRosWrapper.py
src/: CMakeLists.txt
src/archive/: MaestroController.cpp  RobotLegOld.cpp  RobotLegOld.hpp
src/include/: MaestroController.hpp  RobotLeg.hpp
src/src/: RobotLeg.cpp  RobotLegROS.cpp  RobotLegRosWrapper.cpp  main.cpp
src_archive/kinematics_tester/: MaestroController.py
src_archive/latech/: DH_calculations.m  cpp.tex
src_archive/robot_leg/include/RobotLeg/: RobotLegRosWrapper.hpp
src_archive/robot_leg/src/: RobotLegRosWrapper.cpp
src_archive/ros_packages_raw/maestro/: MaestroRosWrapper.py
src_archive/ros_packages_raw/maestro/msg/: MaestroTarget.msg
src_archive/src/: CMakeLists.txt
src_archive/src/archive/: MaestroController.hpp
src_archive/src/include/: RobotLeg.hpp  RobotLegROS.hpp  RobotLegRosWrapper.hpp
src_archive/src/src/: RobotLeg.cpp  main.cpp
(+44 files in other folders)
