<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>polulu_maestro</name>
  <version>0.0.0</version>
  <description>Package that interfaces Polulu Maestro plugged by UART with ROS</description>
  <maintainer email="Kubam0906@gmail.com">JakubMazur</maintainer>
  <license>Placeholder license declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>  
  <exec_depend>maestro_interfaces</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
